Changes from jTDS 0.8.1
=========================

07/15/2004 - Brian Heineman
 o Refactored JtdsDataSource implementation into AbstractDataSource,
   JtdsDataSource and JtdsConnectionPoolDataSource.
 o Updated FAQ documentation to reflect current driver and data source class
   names.
 o Added test for bug [930305] getGeneratedKeys() does not work with triggers

07/14/2004 - Brian Heineman
 o Updated ResultSetMetaData.getColumnType(int) always return Types.BIT for BIT
   columns. Updated tests to ensure this functionality continues to work in the
   future.
   http://sourceforge.net/forum/forum.php?thread_id=1108433&forum_id=129584
 o Corrected bug [991033] Data type 0x32 is unknown error with SQL Server 2005;
   SYBBITN values are now properly formed and are no longer sent as SYBBIT
   when they are not null.
 o Corrected bug [991088] Data type 0x3E is unknown error with SQL Server 2005;
   SYBFLTN values are now properly formed and are no longer sent as SYBFLT8
   when they are not null.
 o Updated documentation to reflect SQL Server 2005 compliance.

07/13/2004 - Brian Heineman
 o Corrected bug [989963] BigInt becomes Numeric;
   ResultSetMetaData.getColumnType(int) now returns Types.BIGINT. Added tests
   to ensure this functionality continues to work in the future.
 o Added test for bug [989399] bug? blob.getBytes() from 0
 o Updated ResultSetMetaData.getColumnType(int) to return Types.BOOLEAN for BIT
   columns when using a 1.4+ JRE; returns Types.BIT otherwise.  Added tests
   to ensure this functionality continues to work in the future.

07/12/2004 - Brian Heineman
 o Removed JNetDirect performance results to comply with their licensing.

07/08/2004 - Brian Heineman
 o Added test for bug [983561] getDatetimeValue truncates fractional
   milliseconds.

07/07/2004 - Brian Heineman
 o Added test for bug [974036] Bug in 0.8rc1 DatabaseMetaData method
   getTableTypes()
 o Corrected bug [985956] Cannot setObject(null) on image; Added test to ensure