@@ -7,7 +7,8 @@ Changes from jTDS 0.8.1
  o Updated FAQ documentation to reflect current driver and data source class
    names.
  o Added test for bug [930305] getGeneratedKeys() does not work with triggers
-
+ o Added test for bug [974801] stored procedure error in Northwind
+ 
 07/14/2004 - Brian Heineman
  o Updated ResultSetMetaData.getColumnType(int) always return Types.BIT for BIT
    columns. Updated tests to ensure this functionality continues to work in the
